English Dolibarr ChangeLog

***** ChangeLog for 3.1 compared to 3.0 *****

For developers:
- New: External modules can add their menu manager


***** ChangeLog for 3.0 compared to 2.9 *****

For users:
- New: Can edit date of cheque receipts.
- New: Add Sales journal and Purchase journal report.
- New: Can create supplier invoice from supplier order.
- New: Support login by openid
- New: Support "full day" event in calendar module.
- New: Add a weather on dashboard.
- New: Add a Paypal module.
- New: Can choose third party to use in point of sale module during logon.
- New: A lot of enhancements into ECM module:
       Directories can contains special characters,
       Speed enhancements,
       Directories can be created outside of Dolibarr, refresh button will 
       update database,
       Can rename a file.
- New: Reordering lines in invoice, orders, commercial proposal is faster (use Ajax
       technology).      
- New: Can import members using assistant.
- New: Can exclude deposit, replacement or credit notes in script rebuild_merge_pdf.
- New: task #10473 : Option MAIN_PROFIDx_IN_ADDRESS must no more be hidden.
- New: Can generate business card for on particular member.
- New: Task #10553 : Can attach files on members card.
- New: Can filter on payment type and bank account in payment lists.
- New: When sending supplier orders by mail, a text is predefined.
- New: Upgrade process works with Postgresql.
- New: Task #10538: Add filter on expiration date of subscription for
       foundation module email selector.
- New: Task #9643: Add 2 status (tosell/tobuy) on products instead of only
       1 status for both selling and buying.       
- New: Can input payment conditions on several lines.
- New: Add hidden option MAIN_LOGOUT_GOTO_URL to set the exit url after
       a logout.
- New: For germany, we invert order of address.
- New: Add hidden option MAIN_SERVICES_ARE_ECOMMERCE_200238EC.
- New: Support NPR in customer product prices.