@@ -32,14 +32,14 @@ require_once(DOL_DOCUMENT_ROOT.'/lib/pdf.lib.php');
 require_once(DOL_DOCUMENT_ROOT."/product/class/product.class.php");
 require_once(DOL_DOCUMENT_ROOT."/compta/bank/class/account.class.php");   // Requis car utilise dans les classes qui heritent
 require_once(DOL_DOCUMENT_ROOT.'/includes/fpdf/fpdfi/fpdi_protection.php');
-//require_once(DOL_DOCUMENT_ROOT.'/includes/tcpdf/tcpdf.php');
+require_once(DOL_DOCUMENT_ROOT."/core/class/commondocgenerator.class.php");
 
 
 /**
  *	\class      ModelePDFFactures
  *	\brief      Classe mere des modeles de facture
  */
-class ModelePDFFactures
+class ModelePDFFactures extends CommonDocGenerator
 {
 	var $error='';
 
