@@ -1,6 +1,8 @@
 English Dolibarr ChangeLog
 
 ***** ChangeLog for 3.1 compared to 3.0 *****
+For users:
+- New: Can add information on current user on odt generation
 
 For developers:
 - New: External modules can add their menu manager
